<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCardBackground"
    android:columnCount="2"
    android:rowCount="8">

    <ImageView
        android:id="@+id/splashDP6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="60dp"
        android:layout_row="0"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash_dp6"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/splashPatrocinio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/splash_patrocinio" />

    <ImageView
        android:id="@+id/splashAdobe"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:layout_column="0"
        android:layout_row="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash_adobe"
        android:paddingEnd="30dp"
        android:paddingStart="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/adobe" />

    <ImageView
        android:id="@+id/splashGoogle"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:layout_column="1"
        android:layout_row="2"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash_google"
        android:paddingEnd="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/google" />

</GridLayout>