<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/localTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8sp"
        android:paddingStart="8sp"
        android:paddingTop="8sp"
        android:text="@string/local_titulo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/localEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8sp"
        android:paddingStart="8sp"
        android:text="@string/local_endereco"
        android:textColor="#757575" />

    <TextView
        android:id="@+id/localManobrista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="4sp"
        android:paddingStart="8sp"
        android:text="@string/local_manobrista"
        android:textColor="#757575" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6sp" />
</LinearLayout>
